# LILA-LAB

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  DISTRIBUTION_STRATEGY.md  Dockerfile  FAQ.md  GLOSSARY.md  JEL_SUBMISSION_FORMAT.md  JES_SUBMISSION_FORMAT.md  Makefile  PHASE1_RESULTS_README.md  PHASE2_THEORY_DEPTH_README.md  README.md  RESTRUCTURE_PLAN.md  ROADMAP.md  SECURITY.md  SENIOR_EDITOR_REVIEW.md  SUBMISSION_GUIDE.md  docker-compose.override.yml.example  docker-compose.yml  economic_narratives_systematic_review.aux  economic_narratives_systematic_review.out  economic_narratives_systematic_review.tex  literature_matrix_draft.csv  main.aux  main.blg  main.out  main.tex  pyproject.toml  refs.bib  systematic_review_66papers.aux  systematic_review_66papers.out  systematic_review_66papers.tex  systematic_review_clean.aux  systematic_review_clean.tex  validation_expanded_section.tex
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pages.yml
.playwright-mcp/: page-2026-06-10T13-51-02-566Z.yml  page-2026-06-10T15-26-50-239Z.yml  page-2026-06-10T15-30-26-262Z.yml  wiki-snapshot.yml
BENI_v1_data_paper/docs/: PRELIMINARY_MERGE_RESULT.md
BENI_v1_data_paper/scripts/: build_beni_v1_articles.py
IJF_SUBMISSION/: Cover_Letter_IJF.txt  README.txt  Submission_Checklist.txt  Title_Page_IJF.txt
JEL_SUBMISSION/: Cover_Letter_JEL.txt  Editing_Guide_JEL.txt  README_JEL.txt  Submission_Checklist_JEL.txt  Title_Page_JEL.txt
JES_submission/: Cover_Letter_JES.txt  README_JES.txt  Submission_Checklist_JES.txt  Title_Page_JES.txt  systematic_review_66papers.aux  systematic_review_66papers.out  systematic_review_66papers.tex
JES_submission/Supplementary/: README.txt  literature_matrix.xlsx  quality_assessment.xlsx  results_data_raw.csv
arXiv_submission/: README_arXiv.txt  systematic_review_66papers.aux  systematic_review_66papers.out  systematic_review_66papers.tex
arXiv_submission/Figures/: figure2_performance_distribution.tex
arXiv_submission/Supplementary/: papers_database.csv  quality_assessment.xlsx
communications/: BRAND_GUIDELINES.md  COMMUNITY.md
docs/: CNAME  index.html  robots.txt  styles.css
docs/adr/: ADR-001-xeni-naming-convention.md  README.md  template.md
infrastructure/: README.md
infrastructure/discord-bot/: .env.example
infrastructure/website/: dashboard.html
pipelines/: README.md
pipelines/beni/: BENI_ROADMAP.md  PROJECT_STATUS.md  README.md  beni_arxiv_final.tex  references.bib
pipelines/shared/: __init__.py  config.py  data.py  eval.py  io.py  models.py
pipelines/template/: requirements.txt
technical-reports/: CONTRIBUTING.md  README.md  paper3_beni_pipeline
technical-reports/contributions/: CHANGELOG.md  OWNERS.csv
(+206 files in other folders)
