[project]
name = "lila-lab"
version = "0.1.0"
description = "Language Intelligence for Low-resource Applications — Your language. Your stories. Amplified by AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ann Naser Nabil", email = "lila.lab0x@gmail.com" },
]
keywords = ["nlp", "low-resource", "bangla", "economic-narratives", "text-as-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://nabil0x.github.io/LILA-LAB/"
Repository = "https://github.com/nabil0x/LILA-LAB"
Discord = "https://discord.gg/TrrdKbky"

# --------------------------------------------------------------------------- #
#  Core pipeline dependencies (what template/ and shared/ actually import)
# --------------------------------------------------------------------------- #
[project.optional-dependencies]
core = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "PyYAML>=6.0",
    "tqdm>=4.65",
]

llm = [
    "anthropic>=0.25",
    "openai>=1.30",
    "google-generativeai>=0.5",
]

dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

all = ["lila-lab[core,llm,dev]"]

# --------------------------------------------------------------------------- #
#  Ruff (linter + formatter)
# --------------------------------------------------------------------------- #
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — let formatter decide
]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

# --------------------------------------------------------------------------- #
#  Pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# --------------------------------------------------------------------------- #
#  Build system
# --------------------------------------------------------------------------- #
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
